--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bulma": "^0.8.2",
     "bulma-extensions": "^6.2.7",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
