--- a/tradesaber/package.json
+++ b/tradesaber/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bulma": "^0.9.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-bulma-components": "4.0.0-1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
