--- a/tradesaber/package.json
+++ b/tradesaber/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bulma-components": "4.0.0-1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "swr": "^0.5.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
