--- a/tradesaber/package.json
+++ b/tradesaber/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-bulma-components": "4.0.0-1",
     "react-dom": "^17.0.1",
+    "react-loading-icons": "^1.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.5",
