--- a/tradesaber/package.json
+++ b/tradesaber/package.json
@@ -15,7 +15,7 @@
     "bulma": "^0.9.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-bulma-components": "4.0.0-1",
+    "react-bulma-components": "4.0.2",
     "react-dom": "^17.0.1",
     "react-loading-icons": "^1.0.4",
     "react-router-dom": "^5.2.0",
