--- a/tradesaber/package.json
+++ b/tradesaber/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +19,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bulma-components": "4.0.2",
+    "react-colorful": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-loading-icons": "^1.0.4",
     "react-router-dom": "^5.2.0",
